# Django-Music-School-Management-System

./: .gitignore  New Text Document.txt  README.md  TreeMap.ps1  db.sqlite3  pyproject.toml
apps/accounts/: admin.py  apps.py  decorators.py  forms.py  managers.py  models.py  urls.py  utils.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_instrumentprofile_instrument.py
apps/admin_panel/: apps.py  urls.py  views.py
apps/core/: urls.py  views.py
apps/core/templatetags/: persian_tags.py
apps/payments/: admin.py  apps.py  models.py  urls.py  views.py  zarinpal.py
apps/payments/migrations/: 0001_initial.py
apps/school/: admin.py  apps.py  models.py
apps/school/migrations/: 0001_initial.py
apps/tickets/: admin.py  models.py
apps/tickets/migrations/: 0001_initial.py
mm/: asgi.py  settings.py  urls.py  wsgi.py
static/js/: admin.js  admin_ticket.js  profile.js  tickets.js
templates/: base.html
templates/accounts/: admin_login.html  dashboard.html  login.html  profile.html  register.html  student_base.html  ticket_detail.html  tickets.html
templates/admin_panel/: _directory_rows.html  admin_base.html  class_detail.html  classes.html  dashboard.html  directory.html  payment_detail.html  payments.html  student_detail.html  ticket_detail.html  tickets.html
templates/core/: course_detail.html  course_list.html  invoice.html  landing.html
templates/payments/: verify_fail.html  verify_success.html
