[project]
name = "mm"
version = "0.1.0"
description = ""
authors = [
    {name = "Sattar amini",email = "sattaramini987654@gmail.com"}
]
requires-python = ">=3.12,<4"
dependencies = [
    "django (>=6.0.5,<7.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "whitenoise (>=6.12.0,<7.0.0)",
    "jdatetime (>=4.1)",
    "requests (>=2.31)",
    "django-environ (>=0.14.0,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
